# ReefBlueSky-Kh

./: KH_Analyzer.cpp  KH_Analyzer.h  KH_Predictor.cpp  MeasurementHistory.cpp  MeasurementHistory.h  PumpControl.cpp  README.md  RESUMO_EXECUTIVO.md  ReefBlueSky KH Monitor - Guia Completo de Calibração.md  ReefBlueSky KH Monitor - Guia Completo de Fiação e Fonte de Alimentação.md  ReefBlueSky KH Monitor - Guia de Instalação.md  ReefBlueSky KH Monitor - Manual de Montagem Completo.md  ReefBlueSky KH Monitor - Manual de Operação.md  ReefBlueSky KH Monitor - Sistema de IA Preditiva para Correção Automática de KH.md  ReefBlueSky KH Monitor 🌊.md  ReefBlueSky KH Monitor: Um Sistema Automatizado de Código Aberto para Monitoramento Contínuo de Alcalinidade em Aquários Marinhos.md  ReefBlueSky_KH_Monitor_v2.ino  SensorManager.cpp  WiFi_MQTT.cpp
ReefBlueSkyDisplayC6_LVGL/Display/src/: CMakeLists.txt  main.c
ReefBlueSkyDisplayC6_LVGL/Display/src/api/: APIStructs.h  DisplayClient.c  DisplayClient.h  JWTHandler.c  JWTHandler.h  SetupServer.c  SetupServer.h
ReefBlueSkyDisplayC6_LVGL/Display/src/display/: DisplayManager.cpp  DisplayManager.h  LVGLSetup.cpp  LVGLSetup.h  Themes.cpp  Themes.h  UI_legacy.cpp  UI_legacy.h  display_driver.cpp  display_driver.h  display_simple.cpp  display_simple.h  local_fonts.h  ui.c  ui.h  ui_Screen1.c  ui_Screen1.h  ui_comp_hook.c  ui_events.h  ui_helpers.c  ui_helpers.h
ReefBlueSkyDisplayC6_LVGL/Display/src/led/: LEDController.c  LEDController.h
ReefBlueSkyDisplayC6_LVGL/Display/src/ota/: LcdOta.c  LcdOta.h
backend/: .env  (+27 more)
(+242 files in other folders)
